# algorithms

./: .gitignore  LICENSE
src/c++/: CMakeLists.txt
src/c++/data-structures/: CMakeLists.txt  README.md  doubly-linked-list.cpp  doubly-linked-list.h  dynamic-array.cpp  dynamic-array.h  linked-list.h
src/c++/data-structures/tests/: CMakeLists.txt  doubly-linked-list.cpp  dynamic-array-tests.cpp  dynamic-array.cpp  main.cpp
